--- a/style.css
+++ b/style.css
@@ -20,3 +20,5 @@ ul {background-color: #555555
 #imagem-um {width: 100%;
     border-style: solid;
     border-color: red;
+
+title {text-align: center;}
