--- a/style.css
+++ b/style.css
@@ -17,6 +17,4 @@ ul {font-size: 300%;
 ul {background-color: #555555
 }
 
-#imagem-um {width: 100%;
-    border-style: solid;
-    border-color: red;
+h1 {text-align: center;}
