--- a/style.css
+++ b/style.css
@@ -28,6 +28,6 @@ li {font-size: 200%
 h3 {text-align: center;}
 h3 {font-size:200%;}
 
-i {font-size: medium;}
+i {font-size: 200%;}
 
 p {font-size: 200% ;}
